--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,3 @@
-main {
+.main {
     padding: 1em 10% 1em 10%;
 }
