--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,5 @@ body {
     font-size: 1em;
     margin: 0px;
     background-color: #38383f;
+    overflow: hidden;
 }
